# fresub

./: .gitmodules  CMakeLists.txt  README.md  README_original.md  TEST.md  TODO  TODO.md  run_tests.sh  test_all.sh
benchmarks/: C17.aig  m2.aig  mul2.aig
include/: aig_converter.hpp  aig_insertion.hpp  aig_utils.hpp  conflict.hpp  cuda_kernels.cuh  feasibility.hpp  fresub_aig.hpp  insertion.hpp  resub.hpp  simulation.hpp  synthesis.hpp  synthesis_bridge.hpp  window.hpp
lib/: CMakeLists.txt
src/cpu/: aig_converter.cpp  aig_insertion.cpp  aig_utils.cpp  conflict.cpp  feasibility.cpp  fresub_aig.cpp  insertion.cpp  main.cpp  main_clean.cpp  main_resubstitution.cpp  resub.cpp  simulation.cpp  synthesis.cpp  synthesis_bridge.cpp  test_complete_resubstitution.cpp  test_complete_verification.cpp  test_cuts.cpp  test_debug_insertion.cpp  test_resub_opportunities.cpp  test_simple_insertion.cpp  test_synthesis_integration.cpp  test_truth_table_debug.cpp  test_two_stage.cpp  test_window_detailed.cpp  test_window_mffc.cpp  test_window_stepby.cpp  window.cpp
src/cuda/: resub_kernels.cu  resub_kernels_all.cu
tests/: CMakeLists.txt  README_TESTS.md  fresub  output_simple.aig  test_aig.cpp  test_aig_modification.cpp  test_aiger.cpp  test_aiger_comprehensive.cpp  test_feasibility.cpp  test_feasibility_detailed.cpp  test_insertion.cpp  test_main.cpp  test_main_simple.cpp  test_main_window.cpp  test_no_modifications  test_parallel_bitparallel  test_parallel_bitparallel_v2  test_parallel_clean  test_parallel_debug  test_parallel_debug.cpp  test_parallel_debug_new  test_parallel_stress  test_parallel_stress.cpp  test_race_fixed  test_race_fixed_v2  test_resub.cpp  test_resub_debug  test_resub_simple.cpp  test_simulation.cpp  test_simulation_detailed.cpp  test_stateless  test_synthesis.cpp  test_synthesis_detailed.cpp  test_tsan  test_window.cpp  test_window_debug  test_window_detailed.cpp  test_window_extraction.cpp
tests/core/: test_aig.cpp  test_aig_modification.cpp  test_aiger.cpp  test_aiger_comprehensive.cpp  test_complete_resubstitution.cpp  test_conflict_resolution.cpp  test_feasibility_check.cpp  test_main_simple.cpp  test_resub.cpp  test_resub_simple.cpp  test_single_insertion.cpp  test_synthesis_integration.cpp  test_window.cpp  test_window_proper.cpp
tests/debug/: test_complex_windows.cpp  test_cuts_stepby.cpp  test_exopt_debug.cpp  test_feasibility_detailed.cpp  test_feasibility_verification.cpp  test_isolated_conversion.cpp  test_mffc_debug.cpp  test_mffc_node10.cpp  test_parallel_debug.cpp  test_parallel_stress.cpp  test_resub_detection_status.cpp  test_simulation_detailed.cpp  test_synthesis_detailed.cpp  test_tfo_analysis.cpp  test_window_compare.cpp  test_window_stepby_v2.cpp
tests/integration/: test_full_synthesis.cpp  test_main_window.cpp  test_real_conversion.cpp  test_synthesis_conversion.cpp
tests/unit/: test_aig_operations.cpp  test_complete_pipeline.cpp  test_conflicts.cpp  test_feasibility.cpp  test_insertion.cpp  test_simulation.cpp  test_simulation_simple.cpp  test_synthesis.cpp  test_window_extraction.cpp
